tests/neg/explicit_nulls/src/main/scala/Main.scala
@main def app(): Unit =
  val s: String = null  // error: null cannot be assigned to String
  val n: Int = s.length
  println(n)
